# GKEngine

./: BUGFIX.md  BUGFIX_GL_MINIZIP.md  BUGFIX_RMLCORE_LNK1181.md  CMakeLists.txt  MANUAL_FILES.md  README.md  versions.json
.github/workflows/: build.yml
GKEngine/: GKEngine.sln
GKEngine/Core/: CMakeLists.txt
GKEngine/Core/include/: GKEngineAPI.h
GKEngine/Core/src/: Engine.cpp  Engine.h  GKEngineAPI.cpp
GKEngine/Core/src/ECS/: Entity.h
GKEngine/Core/src/Input/: Input.cpp  Input.h
GKEngine/Core/src/Renderer/: Renderer.cpp  Renderer.h
GKEngine/Core/src/Scene/: Scene.cpp  Scene.h
GKEngine/UI/: App.axaml  App.axaml.cs  GKEngine.UI.csproj  Program.cs  app.manifest
GKEngine/UI/Interop/: NativeEngine.cs
GKEngine/UI/Models/: ComponentModel.cs
GKEngine/UI/Services/: EngineService.cs  EngineSettings.cs  I18nService.cs
GKEngine/UI/Themes/: DarkTheme.axaml  LightTheme.axaml
GKEngine/UI/ViewModels/: EditorViewModel.cs
GKEngine/UI/Views/: BottomPanelView.axaml  BottomPanelView.axaml.cs  ComponentBlockView.axaml  ComponentBlockView.axaml.cs  DetachablePanelView.axaml  DetachablePanelView.axaml.cs  EditorWindow.axaml  EditorWindow.axaml.cs  FieldRowView.axaml  HierarchyPanelView.axaml  InspectorPanelView.axaml  MenuBarView.axaml  SceneViewport.axaml  SceneViewport.axaml.cs  StatusBarView.axaml  ToolbarView.axaml
GKHub/: CMakeLists.txt
GKHub/assets/ui/: index.rml  style.rcss  theme-dark.rcss  theme-light.rcss
GKHub/src/: Common.h  EventHandler.cpp  EventHandler.h  HubApp.cpp  HubApp.h  I18n.cpp  I18n.h  ProfileManager.cpp  ProfileManager.h  ProjectManager.cpp  ProjectManager.h  RmlBackend.cpp  RmlBackend.h  SettingsManager.cpp  SettingsManager.h  SplashScreen.cpp  SplashScreen.h  TemplateManager.cpp  TemplateManager.h  ThemeManager.cpp  ThemeManager.h  TrayIcon.cpp  TrayIcon.h  VersionManager.cpp  VersionManager.h  main.cpp
cmake/: CopyMsvcRuntime.cmake
docs/: ARCHITECTURE.md  BUILD.md
